[project]
name = "army-knife"
version = "0.0.1"
description = "Army Knife: Utilities for running ML experiments with JAX."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Evangelos Chatzaroulas", email = "me@evangelos.ai" }]
keywords = ["python", "machine learning", "experiments", "logging", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { repository = "https://github.com/evangelos-ch/army-knife" }
dependencies = [
    "jax==0.4.11",
    "jaxtyping>=0.2.20",
    "optax==0.1.5",
    "chex==0.1.7"
]

[project.optional-dependencies]
wandb = ["wandb", "pillow", "ffmpeg", "moviepy", "imageio"]
tensorboard = ["tensorboard", "tensorboardX", "crc32c"]
tests = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-env",
    "beartype",
    "jaxlib==0.4.10",
    "dm-haiku==0.0.9",
    "optax==0.1.5",
    "wandb",
    "pillow",
    "moviepy",
    "imageio",
    "tensorboardX"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["army_knife/*.py"]
exclude = ["*_test.py"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore = ["F722"]

[tool.ruff.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "ml",
    "jax",
    "dm",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.isort.sections]
"ml" = ["numpy", "scipy", "sklearn", "pandas"]
"jax" = ["jax", "jaxtyping"]
"dm" = ["haiku", "rlax", "chex", "optax"]

[tool.pytest.ini_options]
# TODO(angel): Far from ideal but can't seem to disable wandb DeprecationWarnings otherwise, and lots of other modules used during testing throw them too...
"filterwarnings" = ["ignore::DeprecationWarning:"]
"addopts" = "--cov=army_knife --cov-report=term-missing:skip-covered --jaxtyping-packages=army_knife,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
"env" = ["WANDB_MODE=offline"]

[tool.coverage.run]
omit = ["*_test.py"]
